# ServerTools

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  rocket.toml
migrations/2019-07-26-060254_remote_servers/: down.sql  up.sql
scripts/css/: servertools.css
scripts/js/: main.js
src/: changelog.md  get.rs  lib.rs  main.rs  models.rs  post.rs  query_structs.rs  schema.rs  seed.rs  test.rs  wmiqueries.rs
src/routes/: get.rs  mod.rs  scripts.rs
src/wmiqueries/: query_structs.rs  services.rs
static/css/: navbar.css  notices.css  servertools.css
static/js/: Chart.RadialGauge.umd.js  main.js
static/templates/: add.html.tera  base.html.tera  hosterror.html.tera  layout.html.tera
templates/: add.html.tera  base.html.tera  layout.html.tera
