[package]
name = "server_tools"
version = "1.0.0"
authors = ["rkbjunior <rkbjunior@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# Rocket web server
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["tera_templates", "json"] }

# Windows API and interfaces
winapi = "0.3.7"
wmi = { version = "0.4.4", path = "../wmi-rs" }

# database
diesel = { version = "1.4.2", features = ["postgres"] }
diesel_infer_schema = { version = "1.4.0", features = ["postgres"] }

#connection pooling
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"

# template engine
tera = "0.11.20"

# Serialization/deserialization crate
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"

#environment variable crate
dotenv = "0.10.1"